# student_teacher_gradebook

./: .gitignore  README.md  REAMDE  REAMDE.md  conftest.py  pyproject.toml
.github/workflows/: PR.yml
__tests__/: _utils.py  conftest.py
__tests__/component/sheets_setup/: test_create_student_sheets.py
__tests__/component/sheets_setup/snapshots/populate_student_sheets/roster0/expected_files/: TeacherBook.xlsx  docProps___app.xml  xl___sharedStrings.xml  xl___workbook.xml  (+2 more)
__tests__/component/update_student_sheets/: test_update_student_sheets.py
__tests__/component/update_student_sheets/test_cases/more_complexe_case/: teacher.xlsx
source/: TeacherBook.xlsx  studentTemplate.xlsx
student_teacher_gradebook/: __init__.py  __main__.py  _config.py
tests/: _utils.py  conftest.py
tests/component/sheets_setup/: test_create_student_sheets.py
tests/component/update_student_sheets/: test_update_student_sheets.py
tests/component/update_student_sheets/test_cases/more_complex_case/: teacher.xlsx
tests/component/update_student_sheets/test_cases/no_update/: Mus476_John Doe_gradebook.xlsx  teacher.xlsx
tests/component/update_student_sheets/test_cases/remove_a_student/: Mus476_Molly Doe_gradebook.xlsx  Mus476_Stephen Jane_gradebook.xlsx  teacher.xlsx
tests/component/update_student_sheets/test_cases/simple_case/: teacher.xlsx
tests/component/update_student_sheets/test_cases/student_sheet_skip_n_rows_case/: teacher.xlsx
tests/component/update_student_sheets/test_cases/there_is_already_data/: Mus476_John Doe_gradebook.xlsx  teacher.xlsx
(+165 files in other folders)
