[tool.poetry]
name = "student-teacher-gradebook"
version = "0.1.0"
description = "utility for a teacher to push grade information to student workbooks"
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
pywin32 = ">=306" # provides win32com
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-snapshot = "^0.9.0"
ni-python-styleguide = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ni-python-styleguide]
application-import-names="student_teacher_gradebook,__tests__"
